--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd-mobile": "^2.3.1",
+    "antd-mobile-demo-data": "^0.3.0",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
+    "react-sticky": "^6.0.3",
     "swiper": "^5.3.6"
   },
   "scripts": {
